[package]
name = "nexus-cog-provenance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Provenance tracking: artifact lineage, graph queries, blast radius"
license = "Apache-2.0"
repository = "https://github.com/nexus-cognitive-tech/nexus-cog-provenance"
homepage = "https://github.com/nexus-cognitive-tech"
authors = ["Nexus Cognitive Technologies"]
keywords = ["cognition", "agent"]
categories = ["data-structures", "development-tools"]
readme = "README.md"

[dependencies]
nexus-cog-core = { git = "https://github.com/nexus-cognitive-tech/nexus-cog-core", tag = "v0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }


parking_lot = "0.12"
petgraph = "0.6"
tempfile = "3"
[dev-dependencies]
